css/place_order.css
/*
Global Styles--------------------------------------------------------
*/

html {   /* box fix */
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    background: #ffd725;
    background-position: top center;
    background-repeat: no-repeat;
    background-size: auto auto;
}

h1 {
    color: #328E00;
    background: #ffffff;
    text-decoration: none;
    text-align: center;
    font-size: 50px;
    margin: auto;
    padding: 20px;
    border-radius: 20px;
    border: 5px solid;
    width: 25em;
}

.customer_info {
    padding: 12px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-bottom: 20px;
    border-radius: 8px;
    text-align: left;
    font-size: 20px;
}

.top {
    margin-top: 30%;        /*FIXME:  This is partially causing your odd spacing issue I think.  Same with .bottom class.  Remember, you can use ctrl+shift+i to use inpector on the the actual webpage.  then you can quickly and individually remove CSS elements and see which ones are causing your spacing issues*/
}

.bottom {
    margin-bottom: 30%;
}

.submit_field {
    padding: 5px;
}

.dropbtn {
    background-color: white;
    color: black;
    width: 270px;
    padding: 15px;
    position: relative;
    bottom: +430px; /*FIXME: these spacings are odd and are causing issues.  Perhaps remove them and try a different approach.  usually,in best practice, giant px vals like this should be avoided */
}

.dropdown {
    position: relative;
}

.dropdown-content {
    display: none;
    position: relative;
    background-color: lightgrey;
    min-width: 80px;
    bottom: +450px; /*FIXME: these spacings are odd and are causing issues.  Perhaps remove them and try a different approach.  usually,in best practice, giant px vals like this should be avoided */
    z-index: 1;
}

.dropdown-content a {
    color: black;
    padding: 15px 15px;
    text-decoration: none;
    display: block;
}

.twodropbtn {
    background-color: white;
    color: black;
    width: 270px;
    padding: 15px;
    position: relative;
    bottom: +630px;
}

.sndDropdown { /*FIXME:  this is a duplicate class*/
    position: relative;
}

.dropdown-contenttwo {
    display: none; 
    position: relative;
    background-color: lightgrey;
    min-width: 80px;
    bottom: +630px;/*FIXME: these spacings are odd and are causing issues.  Perhaps remove them and try a different approach.  usually,in best practice, giant px vals like this should be avoided */
    z-index: 1;
}

.dropdown-contenttwo a {    /*FIXME:  Classes can be reused.  Delete duplicate classes and convert your html to use just one.  Then in your daily scrum, make sure you mentioned that you refactored*/
    color: black;
    padding: 15px 15px;
    text-decoration: none;
    display: block;
}


.dropdown-content a:hover {background-color: white;} /*TODO: Nice use of cool animation stuff like hover! We need to make sure this works in mobile webpage at some point if you decide to keep this*/
.dropdown:hover .dropdown-content {display: block;}
.dropdown:hover .dropbtn {background-color: grey;}

.dropdown-contenttwo a:hover {background-color: white;}
.sndDropdown:hover .dropdown-contenttwo {display: block;}
.sndDropdown:hover .twodropbtn {background-color: grey;}

